--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>This is a Test for my website</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>This is a Test for my website</h1>
+    <h2>Another test</h2>
+  </body>
+</html>
