--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
-    <title>GenuineBucket28</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet">
+    <title></title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <ul>
@@ -14,7 +12,6 @@
       <li><a href="#contact">Change</a></li>
       <li><a href="#about">Change</a></li>
     </ul>
-    <h1>This is a Test for my website</h1>
-    <h2>Another test</h2>
+    <h1>Another page</h1>
   </body>
 </html>
