some work that I did

--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,14 @@
       <li><a href="#contact">Change</a></li>
       <li><a href="#about">Change</a></li>
     </ul>
-    <h1>Another page</h1>
+    <h1>Another page with some javascript</h1>
+    <div class="button">
+
+      <button type="button" class="Date"
+      onclick="document.getElementById('demo').innerHTML = Date()">
+      Click me to display Date and Time.</button>
+
+      <p id="demo" class="Date"></p>
+    </div>
   </body>
 </html>
