--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js"></script>
     <meta charset="utf-8">
     <title>GenuineBucket28</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,5 +17,6 @@
     </ul>
     <h1>This is a Test for my website</h1>
     <h2>Another test</h2>
+
   </body>
 </html>
