I added a JS loop

--- a/index2.html
+++ b/index2.html
@@ -36,6 +36,14 @@
       This button counts down</button>
 
       <p id="counting"></p>
+
+      <button type="button"
+      onclick="document.getElementById('loop').innerHTML = loopTest()">
+      This button runs a loop</button>
+
+      <p id="loop"></p>
+
+
     </div>
   </body>
 </html>
