--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
 
       <button type="button"
       onclick="document.getElementById('loop').innerHTML = loopTest()">
-      This button runs a loop</button>
+      This button runs a loop 10 times</button>
 
       <p id="loop"></p>
 
